--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.24.1",
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.6.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "formik": "^1.5.8",
+    "formik": "^2.1.5",
     "moment": "^2.24.0",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.0.3",
     "react-icons": "^3.7.0",
     "react-image-gallery": "^1.0.8",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.3",
